# CFT_project

test_project/: .env  Dockerfile  READ_ME.txt  alembic.ini  prosto_db.db  pyproject.toml
test_project/app/: __init__.py  config.py  handlers.py  main.py  models.py  utils.py
test_project/app/templates/: add_info_about_salary.html  auth.html  delete_salary.html  delete_user.html  get_info.html  index.html  info_page.html  registration.html  salary_list.html  update_salary.html  update_user.html  users_list.html
test_project/migrations/: env.py
test_project/migrations/versions/: 9fdbdbf89ca9_init_db.py
test_project/tests/: conftest.py  test_create_user.py
